--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,135 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
+
 * {
     box-sizing: border-box;
-    /* font-family: Helvetica, arial, sans-serif; */
-    /* font-size: 16px; */
+    font-family: 'Poppins', sans-serif;
+    margin: 0;
+    padding: 0;
+}
 
+.image-generator {
+    /* height: 40vh; */
+    display: flex;
+    position: relative;
+    align-items: center;
+    justify-content: center;
+    background: url("/assets/images/bg.jpg");
+    background-size: cover;
+    background-position: center;
+}
+
+.image-generator::before {
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0.5;
+    background: #121212;
+}
+
+.image-generator .content {
+    color: #fff;
+    padding: 0 15px;
+    max-width: 760px;
+    text-align: center;
+    position: relative;
+}
+
+.image-generator h1 {
+    font-size: 2.5rem;
+    font-weight: 700;
+}
+
+.image-generator p {
+    font-size: 1.35rem;
+    margin-top: 10px;
+}
+
+.image-generator .generate-form {
+    height: 56px;
+    width: 100%;
+    display: flex;
+    padding: 6px;
+    margin: 45px 0 15px;
+    align-items: center;
+    justify-content: space-between;
+    background: #fff;
+    border-radius: 30px;
+}
+
+.generate-form .prompt-input {
+    width: 100%;
+    height: 100%;
+    font-size: 1rem;
+    outline: none;
+    border: none;
+    padding: 0 17px;
+}
+
+.generate-form .controls {
+    display: flex;
+    height: 100%;
+    gap: 15px;
+}
+
+.generate-form .img-quantity {
+    outline: none;
+    border: none;
+    background: none;
+    font-size: 1rem;
+}
+
+.generate-form .generate-btn {
+    font-size: 1rem;
+    outline: none;
+    border: none;
+    color: #fff;
+    font-weight: 500;
+    padding: 0 25px;
+    cursor: pointer;
+    border-radius: 30px;
+    background: #4949e7;
+}
+
+.image-gallery {
+    display: flex;
+    gap: 15px;
+    justify-content: center;
+    padding: 0 15px;
+    max-width: 1250px;
+    margin: 50px 0;
+}
+
+.image-gallery .img-card {
+    width: 285px;
+    aspect-ratio: 1 / 1;
+    border-radius: 5px;
+    overflow: hidden;
+    position: relative;
+}
+
+.image-gallery .img-card img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.image-gallery .img-card .download-btn {
+    position: absolute;
+    bottom: 15px;
+    right: 15px;
+    background: #fff;
+    height: 36px;
+    width: 36px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.image-gallery .img-card .download-btn img {
+    width: 14px;
+    height: 14px;
 }
